# ai-engineering-journey

./: .gitignore  README.md  pyproject.toml
phase-1-python-for-data/week-01/a1-numpy/: NOTES.md  a1_numpy.ipynb
phase-1-python-for-data/week-01/a2-pandas-titanic/: NOTES.md  a2_pandas_titanic.ipynb
phase-1-python-for-data/week-01/a3-mini-project/: NOTES.md  a3_mini_project.ipynb
phase-1-python-for-data/week-02/w2-a1-cosine-similarity/: w2_a1_cosine_similarity.ipynb
phase-1-python-for-data/week-02/w2-a2-pandas-for-evals/: w2_a2_pandas_for_evals.ipynb
phase-2-applied-ai-llms/p2-a1-first-llm-calls/: p2_a1_first_llm_calls.ipynb
phase-2-applied-ai-llms/p2-a2-structured-output/: p2_a2_structured_output.ipynb
phase-2-applied-ai-llms/p2-a3-embeddings-semantic-search/: p2_a3_embeddings_semantic_search.ipynb
phase-2-applied-ai-llms/p2-a4-rag-end-to-end/: p2_a4_rag_end_to_end.ipynb
phase-2-applied-ai-llms/p2-a5-tool-calling/: p2_a5_tool_calling.ipynb
phase-2-applied-ai-llms/p2-a6-build-an-agent/: p2_a6_build_an_agent.ipynb
phase-2-applied-ai-llms/p2-a7-langgraph-agent/: p2_a7_langgraph_agent.ipynb
phase-2-applied-ai-llms/p2-a8-evaluate-rag/: p2_a8_evaluate_rag.ipynb
phase-3-projects/research-agent/: README.md  agent.py  evals.py
phase-4-advanced-agents/p4-a1-persistent-memory/: p4_a1_persistent_memory.ipynb
phase-4-advanced-agents/p4-a2-human-in-the-loop/: p4_a2_human_in_the_loop.ipynb
phase-4-advanced-agents/p4-a3-multi-agent-supervisor/: p4_a3_multi_agent_supervisor.ipynb
phase-4-advanced-agents/p4-a4-reflection/: p4_a4_reflection.ipynb
