[project]
name = "ai-engineering-journey"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "openai>=2.44.0",
    "pandas>=3.0.4",
    "python-dotenv>=1.2.2",
]
